# SparkEngine

./: CMakeLists.txt  compile_commands.json
assets/models/: Skybox.glb
assets/resources/materials/: default.trs  default_skybox.trs  test_material.trs  test_material_2.trs  ui_material.trs  ui_text_material.trs
assets/resources/models/: cube.trs  skybox.trs
assets/resources/textures/: skybox.trs
assets/shaders/: default.glsl  default_skybox.glsl  example.glsl  test.glsl  ui.glsl
include/Spark/containers/: unordered_map.h
include/Spark/core/: input.h  sstring.h
include/Spark/ecs/: ecs.h  ecs_world.h  entity.h
include/Spark/ecs/components/: entity_child.h
include/Spark/math/: mat4.h  math_types.h  quat.h  vec2.h  vec3.h  vec4.h
include/Spark/memory/: block_allocator.h  freelist.h
include/Spark/physics/: physics_backend.h
include/Spark/platform/: filesystem.h
include/Spark/random/noise/: simplex.h
include/Spark/renderer/: lights.h  material.h  mesh.h  model.h  primitives.h  renderer_frontend.h  renderer_types.h  renderpasses.h  shader.h  texture.h
include/Spark/renderer/vulkan/: vulkan_backend.h  vulkan_context.h  vulkan_dynamic_buffer.h  vulkan_material.h  vulkan_mesh.h
include/Spark/resources/: resource_functions.h  resource_types.h
include/Spark/resources/loaders/: model_loader.h  shader_loader.h
include/Spark/threading/: job.h  thread.h
include/Spark/types/: camera.h  s3d.h
include/Spark/types/darrays/: math_darrays.h
include/Spark/ui/: anchor_2d.h  canvas.h  image.h  rect.h  text.h  transform_2d.h  ui_defaults.h  ui_systems.h
include/Spark/utils/: benchmarking.h  hashing.h
src/core/core/: application.c  input.c  smemory.c  sstring.c
src/core/ecs/: ecs_containers.c  ecs_system.c  ecs_world.c  entity.c  entity_archetype.c
src/core/ecs/components/: entity_child.c
src/core/math/: srand.c
src/core/memory/: block_allocator.c  freelist.c  linear_allocator.c
src/core/physics/: physics_backend.c
src/core/platform/: filesystem.c  platform_linux.c
src/core/random/noise/: simplex_2d.c
src/core/renderer/: primitives.c  renderer_frontend.c
src/core/renderer/vulkan/: vulkan_backend.c  vulkan_buffer.c  vulkan_dynamic_buffer.c  vulkan_material.c  vulkan_shader.c  vulkan_swapchain.c
src/core/resources/loaders/: material_loader.c  model_loader.c  resource_loader.c  shader_loader.c
src/core/systems/: render_system.c  transform_system.c
src/core/threading/: mutex.c  thread.c
src/core/types/: camera.c  ecs_declarations.c
src/core/types/darray/: darray_math.c
src/core/ui/: text.c  ui_systems.c
src/core/utils/: benchmarking.c
tests/: CMakeLists.txt  freelist_tests.c  hashmap_tests.c  main.c  noise.c
tools/resource_copy/: CMakeLists.txt
tools/resource_copy/.cache/clangd/index/: main.c.A27AB3279F78C9CC.idx  s3d.h.B4A6598DEF37396C.idx  s3d_converter.c.2D4B4563C3602518.idx  shader_compiler.c.5F99BE1D9FF2B08E.idx  shader_compiler.h.04A910A37C4A6AD5.idx
tools/resource_copy/src/: main.c  s3d_converter.c  shader_compiler.c  shader_compiler.h
